--- a/video/css/button.css
+++ b/video/css/button.css
@@ -1,9 +1,8 @@
 .button {
 	position: absolute;
-	width: 200px;
-	height: 60px;
-	background: yellow;
-	bottom: 30px;
-	left: 50%;
-	margin-left: -100px;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: transparent;
 }
